z-index divider fix

--- a/components/Divider/Divider.module.scss
+++ b/components/Divider/Divider.module.scss
@@ -1,5 +1,5 @@
 .body {
     position: absolute;
-    z-index: 100;
+    z-index: 10;
     height: calc(var(--vh) * 5);
 }
